fix: special char prevents downloading files with Webdav - EXO-65735